# osqp

./: CMakeLists.txt
configure/: osqp_configure.h.in
cs294Solver/: CMakeLists.txt
cs294Solver/data/: matrix.mat  matrix2.mat
cs294Solver/example/: Makefile  cs294sparse.c  scratchpadExec.c  time_python_decomp.py  time_sparse.py
cs294Solver/include/: library.h
cs294Solver/src/: library.c
docs/interfaces/: linear_systems_solvers.rst
include/: constants.h
lin_sys/direct/: CMakeLists.txt
lin_sys/direct/cs294/: CMakeLists.txt  cs294_interface.c  cs294_interface.h  cs294_loader.c  cs294_loader.h
src/: auxil.c  lin_sys.c
tests/basic_qp/: test_basic_qp.h
tests/solve_linsys/: test_solve_linsys.h
